W-15793257: Optimize metrics query regex